Added popup css

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,8 +2,8 @@ extends layout
 
 block content
   .overlay
-    .center
-      h1= title
+    .popup
+      h1.title= title
       button Single Player
       button Multiplayer
   .underlay
