--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,65 @@
+*, *:before, *:after {
+  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+}
+
 html, body {
   height: 100%;
 }
 
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: rgb(22, 33, 44);
+  font: 14px "Open Sans", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+.overlay, .underlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.overlay {
+  z-index: 100;
+}
+
+.popup {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -200px;
+  margin-top: -150px;
+
+  width: 400px;
+  height: 300px;
+
+  border-radius: 3px;
+
+  text-align: center;
+}
+
+.popup .title {
+  background-color: rgba(62, 83, 94, 1);
+
+  padding: 40px 0;
+  color: #fff;
+  font-size: 60px;
+  height: 50%;
+}
+
+.popup button {
+  cursor: pointer;
+  background-color: rgba(102, 127, 36, 1);
+  border: none;
+
+  color: white;
+  font-size: 30px;
+  font-weight: 100;
+
+  margin: 0;
+  padding: 10px;
+
+  width: 100%;
+  height: 25%;
 }
