Added styles for the game board

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,9 +8,9 @@ block content
       button Multiplayer
   .underlay
     .game
-      aside.score
-        .player 0
-        .enemy 0
+      aside.scores
+        .player.score 0
+        .enemy.score 0
       .board
         .player.paddle
         .enemy.paddle
