--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,3 +63,39 @@ a {
   width: 100%;
   height: 25%;
 }
+
+aside.scores {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  width: 200px;
+  margin-left: -100px;
+
+  text-align: center;
+  background-color: rgba(62, 83, 94, 1);
+}
+
+.score {
+  display: inline-block;
+  width: 100px;
+  height: 50px;
+  font-size: 40px;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+/*.board*/
+
+.paddle, .ball {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.paddle {
+  width: 15%;
+  height: 7%;
+}
+
+.ball {
+  width: 4%;
+  height: 7%;
+}
