Renamed folder "javascripts" to "js"

--- a/views/leaptest.jade
+++ b/views/leaptest.jade
@@ -4,7 +4,7 @@ html
         script(src='http://code.jquery.com/jquery-1.11.0.min.js')
         script(src='socket.io/socket.io.js')
         script(src='//js.leapmotion.com/leap-0.4.3.min.js')
-        script(src='javascripts/leaptest.js')
+        script(src='js/leaptest.js')
         title= title
     body
         p Hello
