Added basic script files for the main page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,3 +6,5 @@ html
     link(rel='stylesheet', href='/css/style.css')
   body
     block content
+    script(src='http://code.jquery.com/jquery-1.11.0.min.js')
+    script(src='js/main.js')
