--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,4 +7,5 @@ html
   body
     block content
     script(src='http://code.jquery.com/jquery-1.11.0.min.js')
+    script(src='js/Game.js')
     script(src='js/main.js')
