--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,5 +7,6 @@ html
   body
     block content
     script(src='http://code.jquery.com/jquery-1.11.0.min.js')
+    script(src='//js.leapmotion.com/leap-0.4.3.min.js')
     script(src='js/Game.js')
     script(src='js/main.js')
