--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,5 +8,5 @@ html
     block content
     script(src='http://code.jquery.com/jquery-1.11.0.min.js')
     script(src='//js.leapmotion.com/leap-0.4.3.min.js')
-    script(src='js/Game.js')
+    script(src='js/ClientGame.js')
     script(src='js/main.js')
