--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   .overlay
     .popup
       h1.title= title
-      button Single Player
+      button Start
   .underlay
     .game
       aside.scores
