Added server-client integration for game type. Not yet implemented single player functionality.

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,8 @@ block content
   .overlay
     .popup
       h1.title= title
-      button Single Player
-      button Multiplayer
+      button#single Single Player
+      button#multiplayer Multiplayer
   .underlay
     .game
       aside.scores
